fix: more gap between header and nav

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -136,7 +136,7 @@ a { color: var(--ui-accent-color); }
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 8px;
 }
 
 .page-content {
